test/syntax/soliditypp/pragma/different_version.solpp
// SPDX-License-Identifier: GPL-3.0
pragma soliditypp ^100.0.0;
// ----
// SyntaxError 3997: (36-63): Source file requires different compiler version (current compiler is ....